--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -26,7 +26,7 @@ jobs:
       #          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t tradinggame .
+        run: docker build -t tradinggame-api .
 
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v1
@@ -34,5 +34,5 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: univ-smb-m1-isc-2023/tradinggame/master
+          repository: univ-smb-m1-isc-2023/tradinggame-api/master
           tags: latest
