--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,5 @@ build/
 .vscode/
 
 ### Sring boot###
-./src/main/resources/application.properties
+/src/main/resources/application.properties
 logs/trading-game.log
