Déplacement des propriétés de l'api alphavantage dans application.properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.application.name=TradingGame
+server.port=8080
+
+data.dailystock.api.domain=https://www.alphavantage.co
+data.dailystock.api.key=demo
