--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,3 +2,7 @@ server.error.include-message=always
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.application.name=TradingGame
+server.port=8080
+
+data.dailystock.api.domain=https://www.alphavantage.co
+data.dailystock.api.key=C47GFDHKNBMVKNLL
