--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
 			<version>20240303</version>
 		</dependency>
 
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+		</dependency>
 
 	</dependencies>
 
