--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version> <!-- La dernière version disponible -->
+			<scope>test</scope>
+		</dependency>
+
 
 
 	</dependencies>
