--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Maven Build & Sonar analysis
         #        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-        run: mvn -B verify --file pom.xml
+        run: mvn -B verify --file pom.xml -Pprod
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
